# aper-project-template

./: Cargo.toml  jamsocket.toml
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
service/: Cargo.toml
service/src/: lib.rs
static/: index.html
