[package]
name = "{{crate_name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-web = "3.3.2"
client = {path="./client"}
aper = {git="https://github.com/aper-dev/aper", branch="main"}
aper-actix = {git="https://github.com/aper-dev/aper", branch="main"}
actix-web-actors = "3.0.0"

[build-dependencies]
aper-build = {git="https://github.com/aper-dev/aper", branch="main"}

