[package]
name = "client"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
aper = {git="https://github.com/aper-dev/aper"}
aper-yew = {git="https://github.com/aper-dev/aper"}
console_error_panic_hook = "0.1.6"
serde = { version = "1.0.124", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = "0.3.48"
yew = "0.17.4"

